[package]
name = 'pallet-kitties'
version = '0.1.0'
authors = ['Mario Pino']
edition = '2018'
repository = 'https://github.com/mariopino/substrate-kitties'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }

frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
